progress on combining projects

--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.4",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.0.0",
+    "react-scrollspy": "^3.4.2",
+    "styled-components": "^4.4.0",
     "uuid": "^7.0.0"
   },
   "keywords": [
