--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-helmet": "^6.0.0",
     "react-scrollspy": "^3.4.2",
     "styled-components": "^4.4.0",
-    "uuid": "^7.0.0"
+    "uuid": "^7.0.0",
+    "yarn": "^1.22.4"
   },
   "keywords": [
     "gatsby"
