--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.4",
     "react-feather": "^2.0.8",
+    "react-ga": "^3.0.0",
     "react-helmet": "^6.0.0",
     "react-scrollspy": "^3.4.2",
     "styled-components": "^4.4.0",
