--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.8.0",
     "gatsby": "^2.20.35",
     "gatsby-image": "^2.3.5",
+    "gatsby-plugin-google-analytics": "^2.3.4",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -30,7 +31,6 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.4",
     "react-feather": "^2.0.8",
-    "react-ga": "^3.0.0",
     "react-helmet": "^6.0.0",
     "react-scrollspy": "^3.4.2",
     "styled-components": "^4.4.0",
